--- a/sources/components/layout.html
+++ b/sources/components/layout.html
@@ -27,147 +27,185 @@
 </script>
 
 <!DOCTYPE html>
-<html lang="{{ lang }}" class="styledScrollbar-squareButton">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--? ↓ Disables forced link for phone number on iOS -->
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="description" content="description" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="./img/favicon.svg" />
-    <link rel="mask-icon" href="./img/favicon.svg" color="#000000" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+<html lang="{{ lang }}"
+      class="styledScrollbar-squareButton">
 
-    <if condition='preloadedFontName != "none"'>
-      <link
-        rel="preload"
-        href="./fonts/{{ preloadedFontName }}.woff2"
-        as="font"
-        type="font/woff2"
-        crossorigin
-      />
-    </if>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0" />
+  <!--? ↓ Disables forced link for phone number on iOS -->
+  <meta name="format-detection"
+        content="telephone=no" />
+  <meta name="description"
+        content="description" />
+  <meta name="theme-color"
+        content="#000000" />
+  <link rel="icon"
+        href="./img/favicon.svg" />
+  <link rel="mask-icon"
+        href="./img/favicon.svg"
+        color="#000000" />
+  <link rel="apple-touch-icon"
+        href="apple-touch-icon.png" />
 
-    <title>{{ title }}</title>
+  <if condition='preloadedFontName != "none"'>
+    <link rel="preload"
+          href="./fonts/{{ preloadedFontName }}.woff2"
+          as="font"
+          type="font/woff2"
+          crossorigin />
+  </if>
 
-    <!-- /-/ General stylesheets -->
-    <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
+  <title>{{ title }}</title>
 
-    <link rel="stylesheet" href="./styles/blocks.css" />
-    <link rel="stylesheet" href="./styles/nomads.css" />
-    <link rel="stylesheet" href="./styles/modifiers.css" />
+  <!-- /-/ General stylesheets -->
+  <link rel="stylesheet"
+        href="./styles/fonts.css" />
+  <link rel="stylesheet"
+        href="./styles/normalize.css" />
 
-    <link rel="stylesheet" href="./styles/stateOfBlocks.css" />
-    <link rel="stylesheet" href="./styles/stateOfnomads.css" />
-    <link rel="stylesheet" href="./styles/stateOfModifiers.css" />
+  <link rel="stylesheet"
+        href="./styles/blocks.css" />
+  <link rel="stylesheet"
+        href="./styles/nomads.css" />
+  <link rel="stylesheet"
+        href="./styles/modifiers.css" />
 
-    <!-- /-/ General scripts -->
-    <if condition="justValidate">
-      <!-- JustValidate -->
-      <script type="module" src="./assets/justValidate/index.js"></script>
-    </if>
+  <link rel="stylesheet"
+        href="./styles/stateOfBlocks.css" />
+  <link rel="stylesheet"
+        href="./styles/stateOfNomads.css" />
+  <link rel="stylesheet"
+        href="./styles/stateOfModifiers.css" />
 
-    <if condition="inputmask">
-      <!-- Inputmask -->
-      <script defer src="./assets/inputmask.min.js"></script>
-    </if>
+  <!-- /-/ General scripts -->
+  <if condition="justValidate">
+    <!-- JustValidate -->
+    <script type="module"
+            src="./assets/justValidate/index.js"></script>
+  </if>
 
-    <if condition="swiper || stepByStep">
-      <!-- Swiper -->
-      <link rel="stylesheet" href="./assets/swiper/swiper-bundle.min.css" />
-      <script type="module" src="./assets/swiper/index.js"></script>
-    </if>
+  <if condition="inputmask">
+    <!-- Inputmask -->
+    <script defer
+            src="./assets/inputmask.min.js"></script>
+  </if>
 
-    <if condition="typed">
-      <!-- Typed -->
-      <script defer src="./assets/typed/typed.min.js"></script>
-      <script defer src="./assets/typed/index.js"></script>
-    </if>
+  <if condition="swiper || stepByStep">
+    <!-- Swiper -->
+    <link rel="stylesheet"
+          href="./assets/swiper/swiper-bundle.min.css" />
+    <script type="module"
+            src="./assets/swiper/index.js"></script>
+  </if>
 
-    <if condition="photoSwipe">
-      <!-- PhotoSwipe -->
-      <script type="module" src="./assets/photoSwipe/index.js"></script>
-      <link rel="stylesheet" href="./assets/photoswipe/photoswipe.css" />
-    </if>
+  <if condition="typed">
+    <!-- Typed -->
+    <script defer
+            src="./assets/typed/typed.min.js"></script>
+    <script defer
+            src="./assets/typed/index.js"></script>
+  </if>
 
-    <if condition="noUiSlider">
-      <!-- NoUiSlider -->
-      <link href="./assets/noUiSlider/nouislider.min.css" rel="stylesheet" />
-      <script type="module" src="./assets/noUiSlider/index.js"></script>
-    </if>
+  <if condition="photoSwipe">
+    <!-- PhotoSwipe -->
+    <script type="module"
+            src="./assets/photoSwipe/index.js"></script>
+    <link rel="stylesheet"
+          href="./assets/photoswipe/photoswipe.css" />
+  </if>
 
-    <if condition="observerTools">
-      <!-- Observer Tools -->
-      <script type="module" src="./scripts/observerTools/index.js"></script>
-    </if>
+  <if condition="noUiSlider">
+    <!-- NoUiSlider -->
+    <link href="./assets/noUiSlider/nouislider.min.css"
+          rel="stylesheet" />
+    <script type="module"
+            src="./assets/noUiSlider/index.js"></script>
+  </if>
 
-    <if condition="scrollTimeline">
-      <script src="./scripts/scroll-timeline.js"></script>
-    </if>
+  <if condition="observerTools">
+    <!-- Observer Tools -->
+    <script type="module"
+            src="./scripts/observerTools/index.js"></script>
+  </if>
 
-    <if condition="toggleBySwipe">
-      <!-- Toggle by swipe -->
-      <script type="module" src="./scripts/toggleBySwipe/index.js"></script>
-      <link rel="stylesheet" href="./scripts/toggleBySwipe/index.css" />
-    </if>
+  <if condition="scrollTimeline">
+    <script src="./scripts/scroll-timeline.js"></script>
+  </if>
 
-    <if condition="horizontalMouseScroll">
-      <!-- Horizontal scroll -->
-      <script type="module" src="./scripts/horizontalMouseScroll.js"></script>
-    </if>
+  <if condition="toggleBySwipe">
+    <!-- Toggle by swipe -->
+    <script type="module"
+            src="./scripts/toggleBySwipe/index.js"></script>
+    <link rel="stylesheet"
+          href="./scripts/toggleBySwipe/index.css" />
+  </if>
 
-    <if condition="dialogs">
-      <!-- For dialogs -->
-      <link rel="stylesheet" href="./scripts/dialogs/index.css" />
-      <script type="module" src="./scripts/dialogs/index.js"></script>
-    </if>
+  <if condition="horizontalMouseScroll">
+    <!-- Horizontal scroll -->
+    <script type="module"
+            src="./scripts/horizontalMouseScroll.js"></script>
+  </if>
 
-    <if condition="mouseParallax">
-      <!-- MouseParallax -->
-      <script type="module" src="./scripts/mouseParallax/index.js"></script>
-    </if>
+  <if condition="dialogs">
+    <!-- For dialogs -->
+    <link rel="stylesheet"
+          href="./scripts/dialogs/index.css" />
+    <script type="module"
+            src="./scripts/dialogs/index.js"></script>
+  </if>
 
-    <if condition="autoScrollPadding">
-      <!-- For scroll padding -->
-      <script type="module" src="./scripts/autoScrollPadding/index.js"></script>
-    </if>
+  <if condition="mouseParallax">
+    <!-- MouseParallax -->
+    <script type="module"
+            src="./scripts/mouseParallax/index.js"></script>
+  </if>
 
-    <if condition="tabs">
-      <!-- Tabs -->
-      <script src="./scripts/tab/index.js"></script>
-      <link rel="stylesheet" href="./scripts/tab/index.css" />
-    </if>
+  <if condition="autoScrollPadding">
+    <!-- For scroll padding -->
+    <script type="module"
+            src="./scripts/autoScrollPadding/index.js"></script>
+  </if>
 
-    <if condition="stepByStep">
-      <!-- StepByStep -->
-      <script type="module" src="./scripts/stepByStepBlock/index.js"></script>
-    </if>
-    <if condition="infiniteScroll">
-      <!-- Infinite Scroll -->
-      <script src="./scripts/infiniteScroll/index.js"></script>
-    </if>
+  <if condition="tabs">
+    <!-- Tabs -->
+    <script src="./scripts/tab/index.js"></script>
+    <link rel="stylesheet"
+          href="./scripts/tab/index.css" />
+  </if>
 
-    <!-- /-/ Other stylesheets and scripts for this page -->
-    <stack name="styles"></stack>
-    <stack name="scripts"></stack>
-  </head>
+  <if condition="stepByStep">
+    <!-- StepByStep -->
+    <script type="module"
+            src="./scripts/stepByStepBlock/index.js"></script>
+  </if>
+  <if condition="infiniteScroll">
+    <!-- Infinite Scroll -->
+    <script src="./scripts/infiniteScroll/index.js"></script>
+  </if>
 
-  <body>
-    <if condition="$slots.header?.filled">
-      <x-header></x-header>
-    </if>
+  <!-- /-/ Other stylesheets and scripts for this page -->
+  <stack name="styles"></stack>
+  <stack name="scripts"></stack>
+</head>
 
-    <main>
-      <yield></yield>
-    </main>
+<body>
+  <if condition="$slots.header?.filled">
+    <x-header></x-header>
+  </if>
 
-    <if condition="$slots.footer?.filled">
-      <x-footer></x-footer>
-    </if>
-  </body>
+  <main>
+    <yield></yield>
+  </main>
 
-  <!-- Made in Russia, with ❤, by Ivan Ulyanov. -->
+  <if condition="$slots.footer?.filled">
+    <x-footer></x-footer>
+  </if>
+</body>
+
+<!-- Made in Russia, with ❤, by Ivan Ulyanov. -->
+
 </html>
